--- a/rules/index.html
+++ b/rules/index.html
@@ -10,7 +10,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Rules - IST Website">
 <meta property="og:description" content="Arndell IST Website">
-<meta property="og:image" content="logo.png">
+<meta property="og:image" content="logo.jfif">
 <meta property="og:url" content="https://arn-ist-yr10.github.io/">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="https://oc.tc/assets/css/main.css">
@@ -34,7 +34,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container">
 <a class="navbar-brand" href="https://arn-ist-yr10.github.io/">
-<img src="logo.png" class="d-inline-block align-top" alt="Logo" width="50" height="50">
+<img src="logo.jfif" class="d-inline-block align-top" alt="Logo" width="50" height="50">
 <span class="title">IST Website</span>
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
