--- a/rules/index.html
+++ b/rules/index.html
@@ -11,7 +11,7 @@
 <meta property="og:title" content="Rules - IST Website">
 <meta property="og:description" content="Arndell IST Website">
 <meta property="og:image" content="logo.jfif">
-<meta property="og:url" content="https://arn-ist-yr10.github.io/IST-Website">
+<meta property="og:url" content="https://arn-ist-yr10.github.io/IST-Website/">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="https://oc.tc/assets/css/main.css">
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -33,7 +33,7 @@
 <body id="rules">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 <div class="container">
-<a class="navbar-brand" href="https://arn-ist-yr10.github.io/IST-Website">
+<a class="navbar-brand" href="https://arn-ist-yr10.github.io/IST-Website/">
 <img src="logo.jfif" class="d-inline-block align-top" alt="Logo" width="50" height="50">
 <span class="title">IST Website</span>
 </a>
