--- a/rules/index.html
+++ b/rules/index.html
@@ -79,7 +79,7 @@ Rules
 <div class="row">
 <div class="col-md-12">
 <ol>
-<li>No remaking Arndell websites in anyway.</li>
+<li>No remaking <a href="https://arndell.nsw.edu.au">Arndell websites</a> in anyway.</li>
 <span class="badge badge-warning">Note</span>
 <small>This includes making it from scratch.</small>
 </ol>
