--- a/index.html
+++ b/index.html
@@ -58,3 +58,121 @@
 </div>
 </div>
 </nav>
+<main>
+<div class="image-slider">
+<div class="carousel slide" data-ride="carousel">
+<div class="carousel-inner">
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/1.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/10.jpg') no-repeat center">
+ </div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/11.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/12.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/13.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/14.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/15.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/16.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/17.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/18.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/19.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/2.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/20.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/21.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/22.png') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/3.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/4.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/5.jpg') no-repeat center">
+</div>
+<div class="carousel-item active" style="background: url('https://oc.tc/assets/img/image-slider/6.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/7.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/8.jpg') no-repeat center">
+</div>
+<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/9.jpg') no-repeat center">
+</div>
+</div>
+<div class="jumbotron-fluid text-center">
+<div class="container">
+<div class="jumbotron-text">
+<h1>
+<span class="red">DxCraft</span> Community
+</h1>
+<p>The awesome server that lets you play large varieties of Minecraft PvP anytime, anywhere.</p>
+</div>
+<a class="btn btn-primary btn-lg" href="https://dxcraft.ga/play">Play Now »</a>
+</div>
+</div>
+</div>
+</div>
+<div class="container">
+<div class="row text-center">
+<div class="col-md-4">
+<h2>Nostalgia</h2>
+<hr>
+<p>With DxCraft Community, you get to play a variety of classic Minecraft PvP maps. Test your skills on different types of maps with unique objectives by awesome designers from DxCraft!</p>
+</div>
+<div class="col-md-4">
+<h2>Competition</h2>
+<hr>
+<p>Managed by iiDxde, DxCraft Community hosts massive PvP matches. Experience a casual competitive environment, where Minecraft PvP can be enjoyed by all!</p>
+</div>
+<div class="col-md-4">
+<h2>Reliability</h2>
+<hr>
+<p>Community contributors are constantly making improvements and fixes to the <strong>server</strong> to keep DxCraft Community stable and strong!</p>
+</div>
+</div>
+</div>
+</main>
+<footer>
+<div class="container">
+<hr>
+<div class="row">
+<div class="col-12 col-md-4">
+<span class="copyright text-muted">
+© DxCraft Community
+</span>
+</div>
+<div class="col-12 col-md-8">
+<ul class="nav justify-content-md-end">
+<div class="nav-item">
+<a class="nav-link" href="https://discord.gg/xewwYpHeyg" target="_blank">Discord</a>
+</div>
+<div class="nav-item">
+<a class="nav-link" href="https://twitch.tv/DxCraft" target="_blank">Twitch</a>
+</div>
+<div class="nav-item">
+<a class="nav-link" href="https://github.com/DxCraft" target="_blank">GitHub</a>
+</div>
+<div class="nav-item">
+<a class="nav-link" href="" target="_blank">Donate (Coming Soon!!)</a>
+</div>
+</ul>
+</div>
+</div>
+</div>
+<script>
+    $(function () {
+      $('[data-toggle="tooltip"]').tooltip()
+    });
+  </script>
+</footer>
+
+
+</body></html>
