--- a/index.html
+++ b/index.html
@@ -111,11 +111,9 @@
 <div class="container">
 <div class="jumbotron-text">
 <h1>
-<span class="red">DxCraft</span> Community
+Arndell <span class="red">IST</span> Website
 </h1>
-<p>The awesome server that lets you play large varieties of Minecraft PvP anytime, anywhere.</p>
 </div>
-<a class="btn btn-primary btn-lg" href="https://dxcraft.ga/play">Play Now »</a>
 </div>
 </div>
 </div>
@@ -123,19 +121,16 @@
 <div class="container">
 <div class="row text-center">
 <div class="col-md-4">
-<h2>Nostalgia</h2>
+<h2 href="news/">News</h2>
 <hr>
-<p>With DxCraft Community, you get to play a variety of classic Minecraft PvP maps. Test your skills on different types of maps with unique objectives by awesome designers from DxCraft!</p>
 </div>
 <div class="col-md-4">
-<h2>Competition</h2>
+<h2 href="about/">About</h2>
 <hr>
-<p>Managed by iiDxde, DxCraft Community hosts massive PvP matches. Experience a casual competitive environment, where Minecraft PvP can be enjoyed by all!</p>
 </div>
 <div class="col-md-4">
-<h2>Reliability</h2>
+<h2 href="rules/">Rules</h2>
 <hr>
-<p>Community contributors are constantly making improvements and fixes to the <strong>server</strong> to keep DxCraft Community stable and strong!</p>
 </div>
 </div>
 </div>
@@ -146,22 +141,16 @@
 <div class="row">
 <div class="col-12 col-md-4">
 <span class="copyright text-muted">
-© DxCraft Community
+© Peter Griffin
 </span>
 </div>
 <div class="col-12 col-md-8">
 <ul class="nav justify-content-md-end">
 <div class="nav-item">
-<a class="nav-link" href="https://discord.gg/xewwYpHeyg" target="_blank">Discord</a>
+<a class="nav-link" href="https://www.arndell.nsw.edu.au/" target="_blank">Arndell Website</a>
 </div>
 <div class="nav-item">
-<a class="nav-link" href="https://twitch.tv/DxCraft" target="_blank">Twitch</a>
-</div>
-<div class="nav-item">
-<a class="nav-link" href="https://github.com/DxCraft" target="_blank">GitHub</a>
-</div>
-<div class="nav-item">
-<a class="nav-link" href="" target="_blank">Donate (Coming Soon!!)</a>
+<a class="nav-link" href="https://github.com/ARN-IST-YR10" target="_blank">GitHub</a>
 </div>
 </ul>
 </div>
