--- a/index.html
+++ b/index.html
@@ -62,49 +62,9 @@
 <div class="image-slider">
 <div class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/1.jpg') no-repeat center">
+<div class="carousel-item" style="background: url('1.jfif/') no-repeat center">
 </div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/10.jpg') no-repeat center">
- </div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/11.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/12.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/13.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/14.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/15.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/16.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/17.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/18.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/19.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/2.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/20.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/21.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/22.png') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/3.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/4.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/5.jpg') no-repeat center">
-</div>
-<div class="carousel-item active" style="background: url('https://oc.tc/assets/img/image-slider/6.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/7.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/8.jpg') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('https://oc.tc/assets/img/image-slider/9.jpg') no-repeat center">
+<div class="carousel-item" style="background: url('2.jfif/') no-repeat center">
 </div>
 </div>
 <div class="jumbotron-fluid text-center">
@@ -121,16 +81,19 @@ Arndell <span class="red">IST</span> Website
 <div class="container">
 <div class="row text-center">
 <div class="col-md-4">
-<h2 href="news/">News</h2>
+<h2>News</h2>
 <hr>
+<a href="news/">Link to news page</a>
 </div>
 <div class="col-md-4">
-<h2 href="about/">About</h2>
+<h2>About</h2>
 <hr>
+<a href="about/">Link to About page</a>
 </div>
 <div class="col-md-4">
-<h2 href="rules/">Rules</h2>
+<h2>Rules</h2>
 <hr>
+<a href="rules/">Link to Rules</a>
 </div>
 </div>
 </div>
