--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
 <div class="image-slider">
 <div class="carousel slide" data-ride="carousel">
 <div class="carousel-inner">
-<div class="carousel-item" style="background: url('1.jfif') no-repeat center">
-</div>
-<div class="carousel-item" style="background: url('2.jfif') no-repeat center">
+<div class="carousel-item" style="background-image: url('1.jfif') no-repeat center">
 </div>
 </div>
 <div class="jumbotron-fluid text-center">
