--- a/rules/index.html
+++ b/rules/index.html
@@ -43,16 +43,16 @@
 <div class="collapse navbar-collapse" id="menu">
 <ul class="navbar-nav ml-auto">
 <li class="nav-item ">
-<a class="nav-link" href="news/">News</a>
+<a class="nav-link" href="IST-WEBSITE/news/">News</a>
 </li>
 <li class="nav-item ">
-<a class="nav-link" href="contact/">Contact</a>
+<a class="nav-link" href="IST-WEBSITE/contact/">Contact</a>
 </li>
 <li class="nav-item  active ">
-<a class="nav-link" href="rules/">Rules</a>
+<a class="nav-link" href="IST-WEBSITE/rules/">Rules</a>
 </li>
 <li class="nav-item ">
-<a class="nav-link" href="about/">About</a>
+<a class="nav-link" href="IST-WEBSITE/about/">About</a>
 </li>
 </ul>
 </div>
