--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ Nano <span class="red">Tech</span>
 <div class="container">
 <div class="row text-center">
 <div class="col-md-4">
-<h2>NanoTech CaseStudy</h2>
+<h2>News</h2>
 <hr>
-<embed type="text/html" src="https://theuselessweb.com/" width="800" height="500">
+<a href="news/">Link to News Page</a>
 </div>
 <div class="col-md-4">
 <h2>About</h2>
