--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Nano <span class="red">Tech</span>
 <a class="nav-link" href="https://www.arndell.nsw.edu.au/" target="_blank">Arndell Website</a>
 </div>
 <div class="nav-item">
-<a class="nav-link" href="https://github.com/ARN-IST-YR10" target="_blank">GitHub</a>
+<a class="nav-link" href="https://github.com/modern-rats/" target="_blank">GitHub</a>
 </div>
 </ul>
 </div>
